--- a/instagram-ng14/src/app/components/auth/signup/signup.component.html
+++ b/instagram-ng14/src/app/components/auth/signup/signup.component.html
@@ -118,7 +118,7 @@
 
           <div class="relative">
             <input
-              type="text"
+              type="password"
               class="w-full rounded border bg-gray-100 p-2 text-xs"
               placeholder="Enter Password"
               formControlName="password"
