--- a/instagram-ng14/src/app/components/profile/edit-profile/edit-profile.component.html
+++ b/instagram-ng14/src/app/components/profile/edit-profile/edit-profile.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="">
+<!-- <div class="">
   <h3 class="bg-gray-400 font-extrabold px-60 text-2xl">
     Edit your profile
   </h3>
@@ -56,6 +56,170 @@
   </div>
 
 
+</div> -->
+
+<div class="container mx-auto px-4 py-6">
+  <!-- Content goes here -->
+  <div class="flex items-center justify-center mb-6">
+    <div
+      (click)="file_input.click()"
+      class="relative w-24 h-24 rounded-full overflow-hidden profile_img"
+    >
+      <img
+        *ngIf="profile_img"
+        (click)="file_input.click()"
+        class="absolute h-full w-full object-cover"
+        src="{{ imageUrl }}/{{ profile_img }}"
+        alt="profile_img"
+      />
+      <img *ngIf="!profile_img" (click)="file_input.click()" class="absolute
+      h-full w-full object-cover"
+      src="../../../../assets/default.png"
+      alt="default" />
+      <input
+        (change)="selectFiles($event)"
+        type="file"
+        name="profile"
+        #file_input
+        hidden
+      />
+      <div class="absolute inset-0 opacity-25"></div>
+    </div>
+  </div>
+
+  <form
+    [formGroup]="profileForm"
+    (ngSubmit)="createProfile(profileForm?.value)"
+    class="max-w-lg mx-auto"
+  >
+    <!-- Input fields go here -->
+    <div class="mb-6">
+      <label class="block text-gray-700 font-bold mb-2" for="name">
+        Username
+      </label>
+      <input
+        class="appearance-none border rounded w-full py-2 px-3 bg-slate-200 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        id="name"
+        type="text"
+        placeholder="Jane Doe"
+        name="username"
+        formControlName="username"
+        readonly
+      />
+    </div>
+    <div class="mb-6">
+      <label class="block text-gray-700 font-bold mb-2" for="name">
+        FirstName
+      </label>
+      <input
+        class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        id="name"
+        type="text"
+        name="firstname"
+        formControlName="firstname"
+      />
+    </div>
+
+    <div class="mb-6">
+      <label class="block text-gray-700 font-bold mb-2" for="name">
+        Last Name
+      </label>
+      <input
+        class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        id="name"
+        type="text"
+        name="lastname"
+        formControlName="lastname"
+      />
+    </div>
+
+    <div class="mb-6">
+      <label class="block text-gray-700 font-bold mb-2" for="email">
+        Email
+      </label>
+      <input
+        class="appearance-none border rounded w-full py-2 px-3 bg-slate-200 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        id="email"
+        type="email"
+        name="email"
+        formControlName="email"
+        readonly
+      />
+    </div>
+
+    <div class="mb-6">
+      <label class="block text-gray-700 font-bold mb-2" for="phone">
+        Phone number
+      </label>
+      <input
+        class="appearance-none border rounded w-full py-2 px-3 bg-slate-200 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        id="phone"
+        type="tel"
+        name="mobile"
+        formControlName="mobile"
+        readonly
+      />
+    </div>
+    <div class="mb-6">
+      <label class="block text-gray-700 font-bold mb-2" for="phone">
+        Gender
+      </label>
+      <input
+        class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        id="gender"
+        type="text"
+        name="gender"
+        formControlName="gender"
+      />
+    </div>
+
+    <div class="mb-6">
+      <label class="block text-gray-700 font-bold mb-2" for="bio"> Bio </label>
+      <textarea
+        class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        id="bio"
+        placeholder="Enter your bio here"
+        name="bio"
+        formControlName="bio"
+      ></textarea>
+    </div>
+    <div class="mb-6">
+      <label class="block text-gray-700 font-bold mb-2" for="phone">
+        City
+      </label>
+      <input
+        class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        id="city"
+        type="text"
+        name="city"
+        formControlName="city"
+      />
+    </div>
+    <div class="mb-6">
+      <label class="block text-gray-700 font-bold mb-2" for="phone">
+        country
+      </label>
+      <input
+        class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        id="country"
+        type="text"
+        name="country"
+        formControlName="country"
+      />
+    </div>
+   
+    <div class="flex justify-center">
+      <button
+        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+        type="submit"
+      >
+        Save Changes
+      </button>
+    </div>
+    <div class="flex justify-center mt-4">
+      <a routerLink="/profile" class="text-gray-500 hover:text-blue-500">
+        Cancel
+      </a>
+    </div>
+  </form>
 </div>
-
-
