--- a/instagram-ng14/src/app/components/profile/profile.component.html
+++ b/instagram-ng14/src/app/components/profile/profile.component.html
@@ -5,29 +5,51 @@
     <header class="flex flex-wrap items-center p-4 md:py-8">
       <div class="md:w-3/12 md:ml-16">
         <!-- profile image -->
-        <img class="w-20 h-20 md:w-40 md:h-40 object-cover rounded-full border-2 border-pink-600 p-1"
-          src="https://www.bytewebster.com/img/logo.png" alt="profile" />
+        <img
+          *ngIf="userProfile.profile_img"
+          class="w-20 h-20 md:w-40 md:h-40 object-cover rounded-full border-2 border-pink-600 p-1"
+          src="{{ imageUrl }}/{{ userProfile.profile_img }}"
+          alt="profile"
+        />
+        <img
+          *ngIf="!userProfile.profile_img"
+          class="w-20 h-20 md:w-40 md:h-40 object-cover rounded-full border-2 border-pink-600 p-1"
+          src="../../../../assets/default.png"
+          alt="default"
+        />
       </div>
 
       <!-- profile meta -->
       <div class="w-8/12 md:w-7/12 ml-4">
         <div class="md:flex md:flex-wrap md:items-center mb-4">
-          <h2 class="text-xl md:text-3xl inline-block font-light md:mr-2 mb-2 sm:mb-0">
+          <h2
+            class="text-xl md:text-3xl inline-block font-light md:mr-2 mb-2 sm:mb-0"
+          >
             {{ userProfile.user.username }}
           </h2>
 
           <!-- badge -->
           <span
             class="inline-block fas fa-certificate fa-lg text-blue-500 relative mr-6 text-xl transform -translate-y-2"
-            aria-hidden="true">
-            <i class="fas fa-check text-white text-xs absolute inset-x-0 ml-1 mt-px"></i>
+            aria-hidden="true"
+          >
+            <i
+              class="fas fa-check text-white text-xs absolute inset-x-0 ml-1 mt-px"
+            ></i>
           </span>
 
           <!-- follow button -->
-          <a *ngIf="self" routerLink="/edit-profile"
-            class="bg-blue-500 px-2 py-1 text-white font-semibold text-sm rounded block text-center sm:inline-block block">Edit</a>
-          <a *ngIf="!self"
-            class="bg-blue-500 px-2 py-1 text-white font-semibold text-sm rounded block text-center sm:inline-block block">Follow</a>
+          <a
+            *ngIf="self"
+            routerLink="/edit-profile"
+            class="bg-blue-500 px-2 py-1 text-white font-semibold text-sm rounded block text-center sm:inline-block block"
+            >Edit</a
+          >
+          <a
+            *ngIf="!self"
+            class="bg-blue-500 px-2 py-1 text-white font-semibold text-sm rounded block text-center sm:inline-block block"
+            >Follow</a
+          >
         </div>
 
         <!-- post, following, followers list for medium screens -->
@@ -52,7 +74,9 @@
           <h1 class="font-semibold">
             {{ userProfile.user.firstName }} {{ userProfile.user.lastName }}
           </h1>
-          <span class="bioclass">{{ userProfile.city }}, {{ userProfile.country }}</span>
+          <span class="bioclass"
+            >{{ userProfile.city }}, {{ userProfile.country }}</span
+          >
           <p>{{ userProfile.bio }}🌍</p>
           <span><strong>www.radixweb.com</strong></span>
         </div>
@@ -61,7 +85,9 @@
       <!-- user meta form small screens -->
       <div class="md:hidden text-sm my-2">
         <h1 class="font-semibold">{{ userProfile.user.username }}</h1>
-        <span class="bioclass">{{ userProfile.city }}, {{ userProfile.country }}</span>
+        <span class="bioclass"
+          >{{ userProfile.city }}, {{ userProfile.country }}</span
+        >
         <p>{{ userProfile.bio }}🌍</p>
         <span><strong>www.radixweb.com</strong></span>
       </div>
@@ -70,7 +96,9 @@
     <!-- posts -->
     <div class="px-px md:px-3">
       <!-- user following for mobile only -->
-      <ul class="flex md:hidden justify-around space-x-8 border-t text-center p-2 text-gray-600 leading-snug text-sm">
+      <ul
+        class="flex md:hidden justify-around space-x-8 border-t text-center p-2 text-gray-600 leading-snug text-sm"
+      >
         <li>
           <span class="font-semibold text-gray-800 block">{{
             userPost.length
@@ -95,58 +123,84 @@
       <br />
       <!-- insta freatures -->
       <ul
-        class="flex items-center justify-around md:justify-center space-x-12 uppercase tracking-widest font-semibold text-xs text-gray-600 border-t">
+        class="flex items-center justify-around md:justify-center space-x-12 uppercase tracking-widest font-semibold text-xs text-gray-600 border-t"
+      >
         <!-- posts tab is active -->
         <li class="md:border-t md:border-gray-700 md:-mt-px md:text-gray-700">
           <a class="inline-block p-3" href="#">
-             
             <span class="hidden md:inline">post</span>
           </a>
         </li>
         <li>
           <a class="inline-block p-3" href="#">
-            
             <span class="hidden md:inline">igtv</span>
           </a>
         </li>
         <li>
           <a class="inline-block p-3" href="#">
-           
             <span class="hidden md:inline">tagged</span>
           </a>
         </li>
       </ul>
       <!-- flexbox grid -->
-      <div *ngIf="userPost"class="flex flex-wrap -mx-px md:-mx-3">
+      <div *ngIf="userPost" class="flex flex-wrap -mx-px md:-mx-3">
         <!-- column -->
 
         <div class="w-1/3 p-px md:px-3" *ngFor="let post of userPost">
           <!-- post 1-->
-          <a routerLink="/view-post/{{post.id}}">
-            <article class="post bg-gray-100 text-white relative pb-full md:mb-6">
+          <a>
+            <article
+              class="post bg-gray-100 text-white relative pb-full md:mb-6"
+            >
               <!-- post images-->
-              <img class="w-full h-full absolute left-0 top-0 object-cover"
-                src="{{ imageUrl }}/{{ post.postImages[0].imagePath }}" alt="image" />
+              <img routerLink="/view-post/{{ post.id }}"
+                class="w-full h-full absolute left-0 top-0 object-cover"
+                src="{{ imageUrl }}/{{ post.postImages[0].imagePath }}"
+                alt="image"
+              />
 
               <i class="fas fa-square absolute right-0 top-0 m-1"></i>
               <!-- overlay-->
-              <div class="overlay bg-gray-800 bg-opacity-25 w-full h-full absolute left-0 top-0 hidden">
+              <div
+                class="overlay bg-gray-800 bg-opacity-25 w-full h-full absolute left-0 top-0 hidden"
+              >
                 <div class="flex justify-center items-center space-x-4 h-full">
-                  
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-1">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
-                    </svg>
-                    {{post.likedPosts.length }}
-                    
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M12 20.25c4.97 0 9-3.694 9-8.25s-4.03-8.25-9-8.25S3 7.444 3 12c0 2.104.859 4.023 2.273 5.48.432.447.74 1.04.586 1.641a4.483 4.483 0 01-.923 1.785A5.969 5.969 0 006 21c1.282 0 2.47-.402 3.445-1.087.81.22 1.668.337 2.555.337z" />
-                    </svg>
-                    
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-6 h-6 mr-1"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
+                    />
+                  </svg>
+                  {{ post.likedPosts.length }}
 
-                 
-              
-                  {{post.cmtPosts.length }}
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-6 h-6 mr-2"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M12 20.25c4.97 0 9-3.694 9-8.25s-4.03-8.25-9-8.25S3 7.444 3 12c0 2.104.859 4.023 2.273 5.48.432.447.74 1.04.586 1.641a4.483 4.483 0 01-.923 1.785A5.969 5.969 0 006 21c1.282 0 2.47-.402 3.445-1.087.81.22 1.668.337 2.555.337z"
+                    />
+                  </svg>
 
+                  {{ post.cmtPosts.length }}
+
+                  <svg (click)="deletePost(post.id)" xmlns="http://www.w3.org/2000/svg" fill="red" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                  </svg>
                   
                 </div>
               </div>
@@ -159,19 +213,27 @@
 </main>
 
 <div *ngIf="data" class="model bg-gray-400 hidden">
-  <div class="h-screen w-full fixed left-0 top-0 pt-10 flex justify-center items-start bg-black bg-opacity-50">
+  <div
+    class="h-screen w-full fixed left-0 top-0 pt-10 flex justify-center items-start bg-black bg-opacity-50"
+  >
     <div class="bg-white rounded shadow-lg md:w-1/3 w-64">
       <div class="border-b px-4 py-2">
         <h3>{{ title }}</h3>
       </div>
 
       <div class="p-3">
-        <p *ngIf="data.length==0"> No Records</p>
+        <p *ngIf="data.length == 0">No Records</p>
 
-        <div *ngFor="let item of data" class="mx-2 flex flex-row items-center align-items justify-between pt-3">
+        <div
+          *ngFor="let item of data"
+          class="mx-2 flex flex-row items-center align-items justify-between pt-3"
+        >
           <div class="flex items-center justify-between">
             <a class="flex">
-              <img class="rounded-full w-8 flex mr-3" src="../../../assets/Logo-facebook.png" />
+              <img
+                class="rounded-full w-8 flex mr-3"
+                src="../../../assets/Logo-facebook.png"
+              />
 
               <p *ngIf="title == 'Followers'" class="font-bold text-sm">
                 {{ item.asfollower.username }}
@@ -181,21 +243,33 @@
               </p>
             </a>
           </div>
-          <button *ngIf="item.isFollowing == false" class="text-xs font-bold text-blue-700">
+          <button
+            *ngIf="item.isFollowing == false"
+            class="text-xs font-bold text-blue-700"
+          >
             follow
           </button>
-          <button *ngIf="item.isFollowing == true" class="text-xs font-bold text-blue-700">
+          <button
+            *ngIf="item.isFollowing == true"
+            class="text-xs font-bold text-blue-700"
+          >
             unfollow
           </button>
 
-          <button *ngIf="title == 'following'" class="text-xs font-bold text-blue-700">
+          <button
+            *ngIf="title == 'following'"
+            class="text-xs font-bold text-blue-700"
+          >
             unfollow
           </button>
         </div>
       </div>
 
       <div class="flex justify-end items-center w-100 border-t p-3">
-        <button (click)="closemodel()" class="bg-red-600 hover:bg-red-800 px-3 py-1 rounded text-white mr-1">
+        <button
+          (click)="closemodel()"
+          class="bg-red-600 hover:bg-red-800 px-3 py-1 rounded text-white mr-1"
+        >
           cancel
         </button>
       </div>
