--- a/instagram-ng14/src/app/components/auth/otp-verify/otp-verify.component.html
+++ b/instagram-ng14/src/app/components/auth/otp-verify/otp-verify.component.html
@@ -1,15 +1,15 @@
 <div class="h-screen bg-gray-200 flex flex-col justify-center items-center">
-    
+  <div *ngIf="msg" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 text-xs rounded relative my-2" role="alert">
+    <strong class="font-bold mr-1">Error!</strong>
+    <span class="block sm:inline">{{msg}}</span>
+  </div>
     <div class="bg-white mb-3 border border-gray-300 w-80 pt-8 pb-4 flex flex-col items-center">
        <h5 class="font-bold">OTP VERIFICATION</h5>
-       <div *ngIf="msg" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
-        <strong class="font-bold">Error!</strong>
-        <span class="block sm:inline">{{msg}}</span>
-        <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
-          <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Close</title><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
-        </span>
-      </div>
-        <form [formGroup]="otpForm" (ngSubmit)="submit(otpForm.value)" class="w-64 flex flex-col gap-1 mt-8" method="post">
+       <img class="img-responsive" src="../../../../assets/otp.png">
+       <p class="font-bold">Just one more step</p>
+       <p class="text-xs">sent 4 digit otp on your register mobile number</p>
+      
+        <form [formGroup]="otpForm" (ngSubmit)="submit(otpForm.value)" class="w-64 flex flex-col gap-1 mt-4" method="post">
             <input type="text" class="w-full rounded border bg-gray-100 p-2 text-xs mb-1" placeholder="Enter otp" formControlName="otp">
             <span class="mr-2 text-xs text-red-500" *ngIf="submitted && otpForm.controls.otp?.errors?.['required']">*This Field is required</span>
             <button type="submit" class="mt-2 text-sm text-center bg-blue-600 text-white py-1 rounded font-medium">Submit</button>
