--- a/instagram-ng14/src/app/components/comman/header/header.component.html
+++ b/instagram-ng14/src/app/components/comman/header/header.component.html
@@ -10,7 +10,7 @@
                     <path strokeLinecap="round" strokeLinejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
                 </svg>
             </div>
-            <input type="text" (ngModelChange)="searchUser()" [(ngModel)]="searchKey" placeholder="search" class="px-8 placeholder:absolute placeholder:left-10 border bg-gray-300 text-dark rounded-md p-1 outline-none">
+            <input type="text" (focus)="onFocus()" (focusout)="onFocusout()"  (ngModelChange)="searchUser()" [(ngModel)]="searchKey" placeholder="search" class="px-8 placeholder:absolute placeholder:left-10 border bg-gray-300 text-dark rounded-md p-1 outline-none">
        
         </div>
     </div>
@@ -37,7 +37,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
           </svg>     
           <!-- <span class="absolute top-0 left-5 bg-red-700 text-white text-xs font-medium mr-1 px-1 py-0.5 rounded-full dark:bg-red-900 dark:text-red-300">3</span>      -->
-          <div class="absolute inline-flex items-center justify-center w-4 h-4 text-[0.5rem] font-bold text-white bg-red-500 border-2 border-white rounded-full -top-2 -right-2 dark:border-gray-900">20</div>
+          <div class="absolute inline-flex items-center justify-center w-4 h-4 text-[0.5rem] font-bold text-white bg-red-500 border-2 border-white rounded-full -top-2 -right-2 dark:border-gray-900">{{totNotification}}</div>
         </div>
           <svg (click)="gotoProfile()" class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
