new notification count show as per new notification

--- a/instagram-ng14/src/app/components/comman/header/header.component.html
+++ b/instagram-ng14/src/app/components/comman/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="bg-white px-16 p-3 border-b border-gray-400">
+<div class="bg-white px-16 p-3 border-b border-gray-400 sticky top-0 z-50">
    <div class="flex justify-center md:justify-between">
     <a routerLink="/feed" class="flex items-center justify-center">
       <img class="h-16" src="../../../../assets/Logo-Instagram.png">
