--- a/instagram-ng14/src/app/components/notification/notification.component.html
+++ b/instagram-ng14/src/app/components/notification/notification.component.html
@@ -58,31 +58,19 @@
 
   <hr />
   <div class="p-2 m-2 font-bold">Other Notifications</div>
-  <!-- <div *ngFor="let cmt of allCmts" class="p-3 m-3 border border-gray-300 rounded-md">
-    <h3>New Notifications</h3>
-    <div class="flex justify-between items-center">
-      <div class="flex items-center">
-        <img class="rounded-full w-8 flex mr-3" src="../../../assets/Logo-facebook.png" />
-        <p>
-          <span class="font-bold">{{ cmt.cmtPost.user.username }}</span>
-          {{ cmt.message }}<span class="text-gray-400">{{ cmt.createdAt | date }}</span>
-        </p>
-      </div>
-      <img class="rounded w-8 flex mr-3" src="{{imageUrl}}/{{like.likedPost.post.postImages[0].imagePath}}" />
-    </div>
-  </div> -->
   <div *ngFor="let like of allLiked" [ngClass]="{'border-gray-300': like.read==1, 'border-blue-600 shadow-sm shadow-blue-400': like.read==0}" class="p-3 m-3 border border-gray-300 rounded-md">
     <h3 *ngIf="!like.read">New Notifications</h3>
     <div class="flex justify-between items-center">
       <div class="flex items-center">
-        <img class="rounded-full w-8 h-8 flex mr-3" src="{{imageUrl}}/{{like.likedPost.user.userProfile.profile_img}}" />
+        <img *ngIf="like?.likedPost.user?.userProfile?.profile_img; else elseBlock" class="rounded-full w-8 h-8 flex mr-3" src="{{imageUrl}}/{{like.likedPost.user?.userProfile?.profile_img}}" />
+        <ng-template #elseBlock><img class="h-8 w-8 rounded-full flex mr-3" src="../../../../assets/default.png" /></ng-template>
         <p>
           <span class="font-bold">{{ like.likedPost.user.username }}</span>
           {{ like.message
           }}<span class="text-gray-400">{{ like.createdAt | date }}</span>
         </p>
       </div>
-      <!-- <img class="rounded w-8 flex mr-3" src="{{imageUrl}}/{{like.likedPost.post.postImages[0].imagePath}}" /> -->
+     
     </div>
   </div>
 </div>
