--- a/instagram-ng14/src/app/components/profile/edit-profile/edit-profile.component.html
+++ b/instagram-ng14/src/app/components/profile/edit-profile/edit-profile.component.html
@@ -60,38 +60,20 @@
 
 <div class="container mx-auto px-4 py-6">
   <!-- Content goes here -->
-  <div class="flex items-center justify-center mb-6">
-    <div
-      (click)="file_input.click()"
-      class="relative w-24 h-24 rounded-full overflow-hidden profile_img"
-    >
-      <img
-        *ngIf="profile_img"
-        (click)="file_input.click()"
-        class="absolute h-full w-full object-cover"
-        src="{{ imageUrl }}/{{ profile_img }}"
-        alt="profile_img"
-      />
+
+  <div class="flex items-center justify-center mb-1">
+    <div (click)="file_input.click()" class="relative w-24 h-24 rounded-full overflow-hidden profile_img">
+      <img *ngIf="profile_img" (click)="file_input.click()" class="absolute h-full w-full object-cover"
+        src="{{ imageUrl }}/{{ profile_img }}" alt="profile_img" />
       <img *ngIf="!profile_img" (click)="file_input.click()" class="absolute
-      h-full w-full object-cover"
-      src="../../../../assets/default.png"
-      alt="default" />
-      <input
-        (change)="selectFiles($event)"
-        type="file"
-        name="profile"
-        #file_input
-        hidden
-      />
+      h-full w-full object-cover" src="../../../../assets/default.png" alt="default" />
+      <input (change)="selectFiles($event)" type="file" name="profile" #file_input hidden />
       <div class="absolute inset-0 opacity-25"></div>
     </div>
   </div>
+  <p (click)="file_input.click()" class="flex items-center justify-center mb-6 font-bold text-blue-900 text-sm hover:text-blue-400">Change Profile Picture</p>
 
-  <form
-    [formGroup]="profileForm"
-    (ngSubmit)="createProfile(profileForm?.value)"
-    class="max-w-lg mx-auto"
-  >
+  <form [formGroup]="profileForm" (ngSubmit)="createProfile(profileForm?.value)" class="max-w-lg mx-auto">
     <!-- Input fields go here -->
     <div class="mb-6">
       <label class="block text-gray-700 font-bold mb-2" for="name">
@@ -99,13 +81,7 @@
       </label>
       <input
         class="appearance-none border rounded w-full py-2 px-3 bg-slate-200 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        id="name"
-        type="text"
-        placeholder="Jane Doe"
-        name="username"
-        formControlName="username"
-        readonly
-      />
+        id="name" type="text" placeholder="Jane Doe" name="username" formControlName="username" readonly />
     </div>
     <div class="mb-6">
       <label class="block text-gray-700 font-bold mb-2" for="name">
@@ -113,11 +89,7 @@
       </label>
       <input
         class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        id="name"
-        type="text"
-        name="firstname"
-        formControlName="firstname"
-      />
+        id="name" type="text" name="firstname" formControlName="firstname" />
     </div>
 
     <div class="mb-6">
@@ -126,11 +98,7 @@
       </label>
       <input
         class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        id="name"
-        type="text"
-        name="lastname"
-        formControlName="lastname"
-      />
+        id="name" type="text" name="lastname" formControlName="lastname" />
     </div>
 
     <div class="mb-6">
@@ -139,12 +107,7 @@
       </label>
       <input
         class="appearance-none border rounded w-full py-2 px-3 bg-slate-200 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        id="email"
-        type="email"
-        name="email"
-        formControlName="email"
-        readonly
-      />
+        id="email" type="email" name="email" formControlName="email" readonly />
     </div>
 
     <div class="mb-6">
@@ -153,12 +116,7 @@
       </label>
       <input
         class="appearance-none border rounded w-full py-2 px-3 bg-slate-200 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        id="phone"
-        type="tel"
-        name="mobile"
-        formControlName="mobile"
-        readonly
-      />
+        id="phone" type="tel" name="mobile" formControlName="mobile" readonly />
     </div>
     <div class="mb-6">
       <label class="block text-gray-700 font-bold mb-2" for="phone">
@@ -166,22 +124,14 @@
       </label>
       <input
         class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        id="gender"
-        type="text"
-        name="gender"
-        formControlName="gender"
-      />
+        id="gender" type="text" name="gender" formControlName="gender" />
     </div>
 
     <div class="mb-6">
       <label class="block text-gray-700 font-bold mb-2" for="bio"> Bio </label>
       <textarea
         class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        id="bio"
-        placeholder="Enter your bio here"
-        name="bio"
-        formControlName="bio"
-      ></textarea>
+        id="bio" placeholder="Enter your bio here" name="bio" formControlName="bio"></textarea>
     </div>
     <div class="mb-6">
       <label class="block text-gray-700 font-bold mb-2" for="phone">
@@ -189,11 +139,7 @@
       </label>
       <input
         class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        id="city"
-        type="text"
-        name="city"
-        formControlName="city"
-      />
+        id="city" type="text" name="city" formControlName="city" />
     </div>
     <div class="mb-6">
       <label class="block text-gray-700 font-bold mb-2" for="phone">
@@ -201,18 +147,13 @@
       </label>
       <input
         class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        id="country"
-        type="text"
-        name="country"
-        formControlName="country"
-      />
+        id="country" type="text" name="country" formControlName="country" />
     </div>
-   
+
     <div class="flex justify-center">
       <button
         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-        type="submit"
-      >
+        type="submit">
         Save Changes
       </button>
     </div>
