--- a/instagram-ng14/src/app/components/posts/add-comment/add-comment.component.html
+++ b/instagram-ng14/src/app/components/posts/add-comment/add-comment.component.html
@@ -22,15 +22,18 @@
         <div class="flex items-center justify-between mx-4 mt-3 mb-2">
           <div class="flex gap-5">
 
-            <svg id="{{ post.id }}" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="gray" class="w-7 h-7">
-              <path
-                d="M11.645 20.91l-.007-.003-.022-.012a15.247 15.247 0 01-.383-.218 25.18 25.18 0 01-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0112 5.052 5.5 5.5 0 0116.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 01-4.244 3.17 15.247 15.247 0 01-.383.219l-.022.012-.007.004-.003.001a.752.752 0 01-.704 0l-.003-.001z" />
+            <svg *ngIf="post.isAlreadyLiked" (click)="likedPost($event)" id="feed-{{ post.id }}"
+              xmlns="http://www.w3.org/2000/svg" fill="red" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+              class="w-7 h-7">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
             </svg>
 
-            <svg fill="#262626" height="24" viewBox="0 0 48 48" width="24">
-              <path clip-rule="evenodd"
-              d="M47.5 46.1l-2.8-11c1.8-3.3 2.8-7.1 2.8-11.1C47.5 11 37 .5 24 .5S.5 11 .5 24 11 47.5 24 47.5c4 0 7.8-1 11.1-2.8l11 2.8c.8.2 1.6-.6 1.4-1.4zm-3-22.1c0 4-1 7-2.6 10-.2.4-.3.9-.2 1.4l2.1 8.4-8.3-2.1c-.5-.1-1-.1-1.4.2-1.8 1-5.2 2.6-10 2.6-11.4 0-20.6-9.2-20.6-20.5S12.7 3.5 24 3.5 44.5 12.7 44.5 24z"
-                fill-rule="evenodd"></path>
+            <svg *ngIf="!post.isAlreadyLiked" (click)="likedPost($event)" id="feed-{{ post.id }}"
+              xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="w-7 h-7">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
             </svg>
             <svg fill="#262626" height="24" viewBox="0 0 48 48" width="24">
               <path
@@ -41,7 +44,7 @@
           <div class="flex">
             <svg fill="#262626" height="24" viewBox="0 0 48 48" width="24">
               <path
-              d="M43.5 48c-.4 0-.8-.2-1.1-.4L24 29 5.6 47.6c-.4.4-1.1.6-1.6.3-.6-.2-1-.8-1-1.4v-45C3 .7 3.7 0 4.5 0h39c.8 0 1.5.7 1.5 1.5v45c0 .6-.4 1.2-.9 1.4-.2.1-.4.1-.6.1zM24 26c.8 0 1.6.3 2.2.9l15.8 16V3H6v39.9l15.8-16c.6-.6 1.4-.9 2.2-.9z">
+                d="M43.5 48c-.4 0-.8-.2-1.1-.4L24 29 5.6 47.6c-.4.4-1.1.6-1.6.3-.6-.2-1-.8-1-1.4v-45C3 .7 3.7 0 4.5 0h39c.8 0 1.5.7 1.5 1.5v45c0 .6-.4 1.2-.9 1.4-.2.1-.4.1-.6.1zM24 26c.8 0 1.6.3 2.2.9l15.8 16V3H6v39.9l15.8-16c.6-.6 1.4-.9 2.2-.9z">
               </path>
             </svg>
           </div>
@@ -52,143 +55,160 @@
         </div>
 
         <div class="font-semibold text-sm mx-4 mt-2 mb-4">
-          {{ post.likedPosts.length }} likes
+          <span id="like-{{post.id}}">{{ post.likedPosts.length }} </span> likes
         </div>
-        <div class="px-4 mt-2 text-gray-400 text-xs mb-4">2 DAYS AGO</div>
-        
-      
+        <div class="px-4 mt-2 text-gray-400 text-xs mb-4">{{post.createdAt|date}}</div>
+
+
       </div>
       <div class="md:w-1/2 bg-white border md:relative">
-          <!-- show comment -->
-          <div *ngIf="post.cmtPosts.length > 0" class="px-4 my-1 text-gray-400 md:text-lg">
-            VIEW ALL COMMENTS
-          </div>
-          <div *ngFor="let cmt of comments; let i = index" class="px-4 py-1 flex justify-between">
-            <div class="w-full">
-              <span class="font-semibold mr-1 text-sm">
-                {{ cmt.byUser.username }}
-              </span>
-              <span class="text-sm font-normal" id="{{ cmt.id }}">{{ cmt.comment }}
-              </span>
-              <span (click)="openReplySection(cmt.id)"
-                class="cursor-pointer float-right text-xs font-semibold p-1">Reply</span>
-                <div class="flex">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="ml-4 w-4 h-4">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
-                  </svg>
-                  <span class="text-xs mx-1">Like</span>
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="ml-4 w-4 h-4">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-                  </svg>
-                  
-                  <span class="text-xs mx-1">{{cmt.createdAt | date}}</span>
-                </div>
-  
-              <div *ngIf="cmt?.reply" class="f">
-                <ng-template #recursiveList let-list>
-                  <div *ngFor="let node of list" class="pl-4 py-1">
-                    <div class="flex">
-                      <span class="font-semibold mr-1 ml-2 text-sm">
-                        {{ node.byUser.username }}
-                      </span>
-                      <span class="text-sm font-normal" id="{{ node.id }}">{{
+        <!-- show comment -->
+        <div *ngIf="post.cmtPosts.length > 0" class="px-4 my-1 text-gray-400 md:text-lg">
+          VIEW ALL COMMENTS
+        </div>
+        <div *ngFor="let cmt of comments; let i = index" class="px-4 py-1 flex justify-between">
+          <div class="w-full">
+            <span class="font-semibold mr-1 text-sm">
+              {{ cmt.byUser.username }}
+            </span>
+            <span class="text-sm font-normal" id="{{ cmt.id }}">{{ cmt.comment }}
+            </span>
+            <span (click)="openReplySection(cmt.id)"
+              class="cursor-pointer float-right text-xs font-semibold p-1">Reply</span>
+            <div class="flex">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="ml-4 w-4 h-4">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
+              </svg>
+              <span class="text-xs mx-1">Like</span>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="ml-4 w-4 h-4">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+
+              <span class="text-xs mx-1">{{cmt.createdAt | date}}</span>
+              <svg *ngIf="cmt.reply.length > 0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="ml-4 w-4 h-4">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z" />
+                <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+              </svg>
+
+              <span *ngIf="cmt.reply.length > 0" class="text-xs mx-1" (click)="showReplies(cmt.id,$event)">show replies</span>
+
+            </div>
+
+            <div *ngIf="cmt?.reply" id="replies-{{cmt.id}}" hidden>
+              <ng-template #recursiveList let-list>
+                <div *ngFor="let node of list" class="pl-4 py-1">
+                  <div class="flex">
+                    <span class="font-semibold mr-1 ml-2 text-sm">
+                      {{ node.byUser.username }}
+                    </span>
+                    <span class="text-sm font-normal" id="{{ node.id }}">{{
                         node.comment
                       }}</span><br />
-                      <span (click)="openReplySection(node.id)"
-                        class="cursor-pointer float-right text-xs font-semibold p-1 ml-auto">
-                        Reply</span>
-                    </div>
-                    <div class="flex">
-                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="ml-4 w-4 h-4">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
-                      </svg>
-                      <span class="text-xs mx-1">Like</span>
-                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="ml-4 w-4 h-4">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-                      </svg>
-                      
-                      <span class="text-xs mx-1">{{cmt.createdAt | date}}</span>
-                    </div>
-                    <div *ngIf="node.reply.length > 0">
-                      <ng-container *ngTemplateOutlet="
+                    <span (click)="openReplySection(node.id)"
+                      class="cursor-pointer float-right text-xs font-semibold p-1 ml-auto">
+                      Reply</span>
+                  </div>
+                  <div class="flex">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                      stroke="currentColor" class="ml-4 w-4 h-4">
+                      <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
+                    </svg>
+                    <span class="text-xs mx-1">Like</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                      stroke="currentColor" class="ml-4 w-4 h-4">
+                      <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+
+                    <span class="text-xs mx-1">{{cmt.createdAt | date}}</span>
+                  </div>
+                  <div *ngIf="node.reply.length > 0">
+                    <ng-container *ngTemplateOutlet="
                           recursiveList;
                           context: { $implicit: node.reply }
                         "></ng-container>
-                    </div>
-  
-                    <!-- reply box for inner reply -->
-                    <div id="cmt-{{ node.id }}" hidden>
-                      <form [formGroup]="cmtForm" (ngSubmit)="addReply(node.id)" class="flex font-semibold text-sm mt-2">
-                        <div class="flex items-center px-2 py-3">
-                          <img class="h-8 w-8 rounded-full" src="{{ imageUrl }}/{{
+                  </div>
+
+                  <!-- reply box for inner reply -->
+                  <div id="cmt-{{ node.id }}" hidden>
+                    <form [formGroup]="cmtForm" (ngSubmit)="addReply(node.id)" class="flex font-semibold text-sm mt-2">
+                      <div class="flex items-center px-2 py-3">
+                        <img class="h-8 w-8 rounded-full" src="{{ imageUrl }}/{{
                               loggedUser?.userProfile?.profile_img
                             }}" />
-                          <div class="ml-1">
-                            <span *ngIf="loggedUser"
-                              class="text-sm pr-2 font-semibold antialiased block leading-tight">{{ loggedUser.username }}</span>
-                          </div>
+                        <div class="ml-1">
+                          <span *ngIf="loggedUser"
+                            class="text-sm pr-2 font-semibold antialiased block leading-tight">{{ loggedUser.username }}</span>
                         </div>
-                        <input type="text" class="w-full ml-4 pl-2 mx-2 my-4 border border-gray-300 rounded-full"
-                          placeholder="reply to {{ cmt.byUser.username }}" name="comment" formControlName="comment" />
-                        <button type="submit" class="mr-2 border bg-gray-200 rounded p-2 my-4">
-                          POST
-                        </button>
-                      </form>
-                    </div>
-                    <!-- end reply box -->
+                      </div>
+                      <input type="text" class="w-full ml-4 pl-2 mx-2 my-4 border border-gray-300 rounded-full"
+                        placeholder="reply to {{ cmt.byUser.username }}" name="comment" formControlName="comment" />
+                      <button type="submit" class="mr-2 border bg-gray-200 rounded p-2 my-4">
+                        POST
+                      </button>
+                    </form>
                   </div>
-                </ng-template>
-                <ng-container *ngTemplateOutlet="
+                  <!-- end reply box -->
+                </div>
+              </ng-template>
+              <ng-container *ngTemplateOutlet="
                     recursiveList;
                     context: { $implicit: cmt.reply }">
-                  </ng-container>
-              </div>
-              
-  
-              <!-- reply box -->
-              <div id="cmt-{{ cmt.id }}" hidden>
-                <form [formGroup]="cmtForm" (ngSubmit)="addReply(cmt.id)" class="flex font-semibold text-sm mt-2">
-                  <div class="flex items-center px-2 py-3">
-                    <img class="h-8 w-8 rounded-full" src="{{ imageUrl }}/{{
+              </ng-container>
+            </div>
+
+
+            <!-- reply box -->
+            <div id="cmt-{{ cmt.id }}" hidden>
+              <form [formGroup]="cmtForm" (ngSubmit)="addReply(cmt.id)" class="flex font-semibold text-sm mt-2">
+                <div class="flex items-center px-2 py-3">
+                  <img class="h-8 w-8 rounded-full" src="{{ imageUrl }}/{{
                         loggedUser?.userProfile?.profile_img
                       }}" />
-                    <div class="ml-1">
-                      <span *ngIf="loggedUser"
-                        class="text-sm pr-2 font-semibold antialiased block leading-tight">{{ loggedUser.username }}</span>
-                    </div>
+                  <div class="ml-1">
+                    <span *ngIf="loggedUser"
+                      class="text-sm pr-2 font-semibold antialiased block leading-tight">{{ loggedUser.username }}</span>
                   </div>
-                  <input type="text" class="w-full ml-4 pl-2 mx-2 my-4 border border-gray-300 rounded-full"
-                    placeholder="reply to {{ cmt.byUser.username }}" name="comment" formControlName="comment" />
-                  <button type="submit" class="mr-2 border bg-gray-200 rounded p-2 my-4">
-                    POST
-                  </button>
-                </form>
-              </div>
-              <!-- end reply box -->
-            </div>
-          </div>
-          <!-- end-show-comment -->
-          
-          <div class="md:absolute md:bottom-0 w-full pb-10 md:pb-0">
-            <hr />
-            <form [formGroup]="cmtForm" (ngSubmit)="addCmt()" class="flex font-semibold text-sm mx-2 mt-2 mb-4">
-              <div class="flex items-center px-4 py-3">
-                <img *ngIf="loggedUser" class="h-8 w-8 rounded-full"
-                  src="{{ imageUrl }}/{{ loggedUser.userProfile.profile_img }}" />
-                <div class="ml-1">
-                  <span *ngIf="loggedUser"
-                    class="text-sm pr-2 font-semibold antialiased block leading-tight">{{ loggedUser.username }}</span>
                 </div>
-              </div>
-              <input type="text" class="w-full ml-4 pl-2 mx-2 my-4 border border-gray-300 rounded-full"
-                placeholder="Add new comment" name="comment" formControlName="comment" />
-              <button type="submit" class="mr-2 border bg-gray-200 rounded p-2 my-4">
-                POST
-              </button>
-            </form>
+                <input type="text" class="w-full ml-4 pl-2 mx-2 my-4 border border-gray-300 rounded-full"
+                  placeholder="reply to {{ cmt.byUser.username }}" name="comment" formControlName="comment" />
+                <button type="submit" class="mr-2 border bg-gray-200 rounded p-2 my-4">
+                  POST
+                </button>
+              </form>
+            </div>
+            <!-- end reply box -->
           </div>
-  
-          <!-- end-comment  -->
+        </div>
+        <!-- end-show-comment -->
+
+        <div class="md:absolute md:bottom-0 w-full pb-10 md:pb-0">
+          <hr />
+          <form [formGroup]="cmtForm" (ngSubmit)="addCmt()" class="flex font-semibold text-sm mx-2 mt-2 mb-4">
+            <div class="flex items-center px-4 py-3">
+              <img *ngIf="loggedUser" class="h-8 w-8 rounded-full"
+                src="{{ imageUrl }}/{{ loggedUser.userProfile.profile_img }}" />
+              <div class="ml-1">
+                <span *ngIf="loggedUser"
+                  class="text-sm pr-2 font-semibold antialiased block leading-tight">{{ loggedUser.username }}</span>
+              </div>
+            </div>
+            <input type="text" class="w-full ml-4 pl-2 mx-2 my-4 border border-gray-300 rounded-full"
+              placeholder="Add new comment" name="comment" formControlName="comment" />
+            <button type="submit" class="mr-2 border bg-gray-200 rounded p-2 my-4">
+              POST
+            </button>
+          </form>
+        </div>
+
+        <!-- end-comment  -->
       </div>
     </div>
   </div>
